--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,35 @@
 .App {
   text-align: center;
+  overflow-y: hidden;
+}
+
+.left-align {
+  padding-right: 2rem;
+
+}
+
+.icon-dissapear {
+  display: none;
+}
+
+.header-space-right {
+  margin-left: calc(19%);
+  width: calc(100% - 19%) !important;
+}
+
+.btn-right-space {
+  margin-right: 2rem;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+  animation: App-logo-spin infinite 1.25s linear;
+  background-color: rgba(39,62,84,0.82);
+  overflow: hidden;
+  height: 10rem;
+  width: 10rem;
+  z-index: 20;
 }
+
 
 .App-header {
   background-color: #282c34;
@@ -17,17 +40,60 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  -webkit-transition: transform 0.5s ease-in-out;
 }
 
 .App-link {
-  color: #61dafb;
+  color: darkturquoise;
+  font-size: 1.25rem;
+
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  0%{
+    -moz-transform: scale(0.85);
+    -webkit-transform: scale(0.85);
+    -o-transform: scale(0.85);
+    -ms-transform: scale(0.85);
+    transform: scale(0.85);
+    background: rgba(254,0,50,0.50);
+    overflow: hidden;
+    z-index: 2;
   }
-  to {
-    transform: rotate(360deg);
+  25% {
+    -moz-transform: scale(0.55);
+    -webkit-transform: scale(0.55);
+    -o-transform: scale(0.55);
+    -ms-transform: scale(0.55);
+    transform: scale(0.55);
+    background: rgba(39,62,84,0.82);
+    overflow: hidden;
+    z-index: 2;
   }
+  50% {
+    -moz-transform: scale(0.75);
+    -webkit-transform: scale(0.75);
+    -o-transform: scale(0.75);
+    -ms-transform: scale(0.75);
+    transform: scale(0.75);
+    background: rgba(254,0,50,0.50);
+    overflow: hidden;
+    z-index: 2;
+  }
+  100% {
+    -moz-transform: scale(0.85);
+    -webkit-transform: scale(0.85);
+    -o-transform: scale(0.85);
+    -ms-transform: scale(0.85);
+    transform: scale(0.85);
+    background: rgba(39,62,84,0.82);
+    overflow: hidden;
+    z-index: 2;
+  }
+}
+
+
+.App-author {
+  color: cyan;
+  font-size: 1.25rem;
 }
